--- a/stable-diffusion-models/alternative/download.ipynb
+++ b/stable-diffusion-models/alternative/download.ipynb
@@ -30,23 +30,23 @@
     "    else:\n",
     "        print(f\"{path} already exists\")\n",
     "\n",
-    "ckpt_dir = ['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1', 'upscale']\n",
-    "[makedirs(os.path.join(\"./models/checkpoints\", dir)) for dir in ckpt_dir]\n",
+    "ckpt_dir = ['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3']\n",
+    "[makedirs(os.path.join(\"./models/Stable-diffusion\", dir)) for dir in ckpt_dir]\n",
     "\n",
-    "vae_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1']\n",
-    "[makedirs(os.path.join(\"./models/vae\", dir)) for dir in vae_dir]\n",
+    "vae_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3']\n",
+    "[makedirs(os.path.join(\"./models/VAE\", dir)) for dir in vae_dir]\n",
     "\n",
-    "lora_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1']\n",
-    "[makedirs(os.path.join(\"./models/loras\", dir)) for dir in lora_dir]\n",
+    "lora_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3']\n",
+    "[makedirs(os.path.join(\"./models/Lora\", dir)) for dir in lora_dir]\n",
     "\n",
-    "embedding_dir=['sd15', 'sd2', 'sdxl', 'sd3', 'flux1']\n",
-    "[makedirs(os.path.join(\"./models/embeddings\", dir)) for dir in embedding_dir]\n",
+    "embedding_dir=['sd15', 'sd2', 'sdxl', 'sd3']\n",
+    "[makedirs(os.path.join(\"./embeddings\", dir)) for dir in embedding_dir]\n",
     "\n",
-    "controlnet_dir=['sd15', 'sd2', 'sdxl', 'sd3', 'flux1']\n",
-    "[makedirs(os.path.join(\"./models/controlnet\", dir)) for dir in controlnet_dir]\n",
+    "controlnet_dir=['sd15', 'sd2', 'sdxl', 'sd3']\n",
+    "[makedirs(os.path.join(\"./models/ControlNet\", dir)) for dir in controlnet_dir]\n",
     "\n",
-    "clip_dir=['sd3']\n",
-    "[makedirs(os.path.join(\"./models/clip\", dir)) for dir in clip_dir]"
+    "# clip_dir=['sd3']\n",
+    "# [makedirs(os.path.join(\"./models/clip\", dir)) for dir in clip_dir]"
    ]
   },
   {
@@ -99,8 +99,8 @@
    "outputs": [],
    "source": [
     "models_dir='./models'\n",
-    "model_types=['checkpoints', 'clip', 'clip_vision', 'configs', 'controlnet', 'deepbooru', 'diffusers', 'embeddings', 'facerestore_models', 'gligen', 'hypernetworks', 'inpaint', 'karlo', 'loras', 'mmdets', 'onnx', 'photomaker', 'prompt_expansion', 'safety_ckecker', 'sams', 'style_models', 'ultralytics', 'unet', 'upscale_models', 'vae', 'vae_approx']\n",
-    "model_versions=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1']\n",
+    "model_types=['Stable-diffusion', 'ControlNet', 'deepbooru', 'BLIP', 'GFPGAN', 'ESRGAN', 'hypernetworks', 'karlo', 'Lora', 'VAE', 'VAE-approx', 'adetailer']\n",
+    "model_versions=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3']\n",
     "\n",
     "class ModelDirs:\n",
     "    def __init__(self, model_versions):\n",
@@ -131,11 +131,11 @@
    "source": [
     "# Set Stable Diffusion 1.5 Model Path\n",
     "\n",
-    "sd15_ckpt_dir=model_dirs.dirs['sd15']['checkpoints']\n",
-    "sd15_vae_dir=model_dirs.dirs['sd15']['vae']\n",
-    "sd15_lora_dir=model_dirs.dirs['sd15']['loras']\n",
-    "sd15_controlnet_dir=model_dirs.dirs['sd15']['controlnet']\n",
-    "sd15_embedding_dir=model_dirs.dirs['sd15']['embeddings']"
+    "sd15_ckpt_dir=model_dirs.dirs['sd15']['Stable-diffusion']\n",
+    "sd15_vae_dir=model_dirs.dirs['sd15']['VAE']\n",
+    "sd15_lora_dir=model_dirs.dirs['sd15']['Lora']\n",
+    "sd15_controlnet_dir=model_dirs.dirs['sd15']['ControlNet']\n",
+    "sd15_embedding_dir='./embeddings/sd15'"
    ]
   },
   {
@@ -862,8 +862,8 @@
    "source": [
     "# Set Stable Diffusion 2.x Model Path\n",
     "\n",
-    "sd2_ckpt_dir=model_dirs.dirs['sd2']['checkpoints']\n",
-    "sd2_controlnet_dir=model_dirs.dirs['sd2']['controlnet']"
+    "sd2_ckpt_dir=model_dirs.dirs['sd2']['Stable-diffusion']\n",
+    "sd2_controlnet_dir=model_dirs.dirs['sd2']['ControlNet']"
    ]
   },
   {
@@ -973,11 +973,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sdxl_ckpt_dir=model_dirs.dirs['sdxl']['checkpoints']\n",
-    "sdxl_vae_dir=model_dirs.dirs['sdxl']['vae']\n",
-    "sdxl_lora_dir=model_dirs.dirs['sdxl']['loras']\n",
-    "sdxl_controlnet_dir=model_dirs.dirs['sdxl']['controlnet']\n",
-    "sdxl_embedding_dir=model_dirs.dirs['sdxl']['embeddings']"
+    "sdxl_ckpt_dir=model_dirs.dirs['sdxl']['Stable-diffusion']\n",
+    "sdxl_vae_dir=model_dirs.dirs['sdxl']['VAE']\n",
+    "sdxl_lora_dir=model_dirs.dirs['sdxl']['Lora']\n",
+    "sdxl_controlnet_dir=model_dirs.dirs['sdxl']['ControlNet']\n",
+    "sdxl_embedding_dir='./embeddings/sdxl'"
    ]
   },
   {
@@ -1649,9 +1649,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pony_ckpt_dir=model_dirs.dirs['pony']['checkpoints']\n",
-    "pony_vae_dir=model_dirs.dirs['pony']['vae']\n",
-    "pony_lora_dir=model_dirs.dirs['pony']['loras']"
+    "pony_ckpt_dir=model_dirs.dirs['pony']['Stable-diffusion']\n",
+    "pony_vae_dir=model_dirs.dirs['pony']['VAE']\n",
+    "pony_lora_dir=model_dirs.dirs['pony']['Lora']"
    ]
   },
   {
@@ -1818,7 +1818,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ilxi_ckpt_dir=model_dirs.dirs['ilxl']['checkpoints']"
+    "ilxi_ckpt_dir=model_dirs.dirs['ilxl']['Stable-diffusion']"
    ]
   },
   {
@@ -1861,8 +1861,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sd3_ckpt_dir=model_dirs.dirs['sd3']['checkpoints']\n",
-    "sd3_clip_dir=model_dirs.dirs['sd3']['clip']"
+    "sd3_ckpt_dir=model_dirs.dirs['sd3']['Stable-diffusion']\n",
+    "# sd3_clip_dir=model_dirs.dirs['sd3']['clip']"
    ]
   },
   {
@@ -1926,11 +1926,11 @@
    "outputs": [],
    "source": [
     "# Download Clip L\n",
-    "hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"text_encoders/clip_l.safetensors\", local_dir=sd3_clip_dir)\n",
-    "filename='clip_l.safetensors'\n",
-    "src=os.path.join(sd3_clip_dir, 'text_encoders')\n",
-    "dst=os.path.join(sd3_clip_dir)\n",
-    "shutil.move(os.path.join(src, filename), os.path.join(dst, filename))"
+    "# hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"text_encoders/clip_l.safetensors\", local_dir=sd3_clip_dir)\n",
+    "# filename='clip_l.safetensors'\n",
+    "# src=os.path.join(sd3_clip_dir, 'text_encoders')\n",
+    "# dst=os.path.join(sd3_clip_dir)\n",
+    "# shutil.move(os.path.join(src, filename), os.path.join(dst, filename))"
    ]
   },
   {
@@ -1940,9 +1940,9 @@
    "outputs": [],
    "source": [
     "# Download Clip G\n",
-    "hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"text_encoders/clip_g.safetensors\", local_dir=sd3_clip_dir)\n",
-    "filename='clip_g.safetensors'\n",
-    "shutil.move(os.path.join(src, filename), os.path.join(dst, filename))"
+    "# hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"text_encoders/clip_g.safetensors\", local_dir=sd3_clip_dir)\n",
+    "# filename='clip_g.safetensors'\n",
+    "# shutil.move(os.path.join(src, filename), os.path.join(dst, filename))"
    ]
   },
   {
@@ -1952,9 +1952,9 @@
    "outputs": [],
    "source": [
     "# Download T5 XXL FP8\n",
-    "hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"text_encoders/t5xxl_fp8_e4m3fn.safetensors\", local_dir=sd3_clip_dir)\n",
-    "filename='t5xxl_fp8_e4m3fn.safetensors'\n",
-    "shutil.move(os.path.join(src, filename), os.path.join(dst, filename))"
+    "# hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"text_encoders/t5xxl_fp8_e4m3fn.safetensors\", local_dir=sd3_clip_dir)\n",
+    "# filename='t5xxl_fp8_e4m3fn.safetensors'\n",
+    "# shutil.move(os.path.join(src, filename), os.path.join(dst, filename))"
    ]
   },
   {
@@ -1964,10 +1964,10 @@
    "outputs": [],
    "source": [
     "# Download T5 XXL FP16\n",
-    "hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"text_encoders/t5xxl_fp16.safetensors\", local_dir=sd3_clip_dir)\n",
-    "filename='t5xxl_fp16.safetensors'\n",
-    "shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\n",
-    "os.rmdir(src)"
+    "# hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"text_encoders/t5xxl_fp16.safetensors\", local_dir=sd3_clip_dir)\n",
+    "# filename='t5xxl_fp16.safetensors'\n",
+    "# shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\n",
+    "# os.rmdir(src)"
    ]
   },
   {
@@ -1983,9 +1983,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flux_ckpt_dir=model_dirs.dirs['flux1']['checkpoints']\n",
-    "flux_vae_dir=model_dirs.dirs['flux1']['vae']\n",
-    "flux_lora_dir=model_dirs.dirs['flux1']['loras']"
+    "# flux_ckpt_dir=model_dirs.dirs['flux1']['checkpoints']\n",
+    "# flux_vae_dir=model_dirs.dirs['flux1']['vae']\n",
+    "# flux_lora_dir=model_dirs.dirs['flux1']['loras']"
    ]
   },
   {
@@ -2002,7 +2002,7 @@
    "outputs": [],
    "source": [
     "# Download Flux.1 Dev Model\n",
-    "hf_hub_download(repo_id=\"black-forest-labs/FLUX.1-dev\", filename=\"flux1-dev.safetensors\", local_dir=flux_ckpt_dir)"
+    "# hf_hub_download(repo_id=\"black-forest-labs/FLUX.1-dev\", filename=\"flux1-dev.safetensors\", local_dir=flux_ckpt_dir)"
    ]
   },
   {
@@ -2012,7 +2012,7 @@
    "outputs": [],
    "source": [
     "# Download Blue Pencil Flux 1 Model\n",
-    "hf_hub_download(repo_id=\"bluepen5805/blue_pencil-flux1\", filename=\"blue_pencil-flux1-v0.2.1-bf16.safetensors\", local_dir=flux_ckpt_dir)"
+    "# hf_hub_download(repo_id=\"bluepen5805/blue_pencil-flux1\", filename=\"blue_pencil-flux1-v0.2.1-bf16.safetensors\", local_dir=flux_ckpt_dir)"
    ]
   },
   {
@@ -2029,7 +2029,7 @@
    "outputs": [],
    "source": [
     "# Download Flux.1 Dev VAE\n",
-    "hf_hub_download(repo_id=\"black-forest-labs/FLUX.1-dev\", filename=\"ae.safetensors\", local_dir=flux_vae_dir)"
+    "# hf_hub_download(repo_id=\"black-forest-labs/FLUX.1-dev\", filename=\"ae.safetensors\", local_dir=flux_vae_dir)"
    ]
   },
   {
@@ -2046,7 +2046,7 @@
    "outputs": [],
    "source": [
     "# Download Flux.1 Dev AntiBlur LoRA\n",
-    "hf_hub_download(repo_id=\"Shakker-Labs/FLUX.1-dev-LoRA-AntiBlur\", filename=\"FLUX-dev-lora-AntiBlur.safetensors\", local_dir=flux_lora_dir)"
+    "# hf_hub_download(repo_id=\"Shakker-Labs/FLUX.1-dev-LoRA-AntiBlur\", filename=\"FLUX-dev-lora-AntiBlur.safetensors\", local_dir=flux_lora_dir)"
    ]
   },
   {
@@ -2056,7 +2056,7 @@
    "outputs": [],
    "source": [
     "# Download Flux.1 Dev Add Details LoRA\n",
-    "hf_hub_download(repo_id=\"Shakker-Labs/FLUX.1-dev-LoRA-add-details\", filename=\"FLUX-dev-lora-add_details.safetensors\", local_dir=flux_lora_dir)"
+    "# hf_hub_download(repo_id=\"Shakker-Labs/FLUX.1-dev-LoRA-add-details\", filename=\"FLUX-dev-lora-add_details.safetensors\", local_dir=flux_lora_dir)"
    ]
   },
   {
@@ -2066,7 +2066,7 @@
    "outputs": [],
    "source": [
     "# Download Tomboy for Flux LoRA\n",
-    "civitai_download(model_version_id=797322, local_dir=flux_lora_dir)"
+    "# civitai_download(model_version_id=797322, local_dir=flux_lora_dir)"
    ]
   },
   {
@@ -2090,7 +2090,7 @@
    "outputs": [],
    "source": [
     "# Download 4x AnimeSharp Model\n",
-    "hf_hub_download(repo_id=\"Kim2091/AnimeSharp\", filename=\"4x-AnimeSharp.pth\", local_dir=\"./models/upscale_models/ESRGAN\")"
+    "hf_hub_download(repo_id=\"Kim2091/AnimeSharp\", filename=\"4x-AnimeSharp.pth\", local_dir=\"./models/ESRGAN\")"
    ]
   },
   {
@@ -2100,7 +2100,7 @@
    "outputs": [],
    "source": [
     "# Download 4x UltraSharp Model\n",
-    "hf_hub_download(repo_id=\"Kim2091/UltraSharp\", filename=\"4x-UltraSharp.pth\", local_dir=\"./models/upscale_models/ESRGAN\")"
+    "hf_hub_download(repo_id=\"Kim2091/UltraSharp\", filename=\"4x-UltraSharp.pth\", local_dir=\"./models/ESRGAN\")"
    ]
   },
   {
@@ -2131,7 +2131,7 @@
     "        response = get(url)\n",
     "        f.write(response.content)\n",
     "\n",
-    "realesrgan_dir=\"./models/upscale_models/RealESRGAN\"\n",
+    "realesrgan_dir=\"./models/RealESRGAN\"\n",
     "os.makedirs(realesrgan_dir, exist_ok=True)"
    ]
   },
@@ -2169,7 +2169,7 @@
    "outputs": [],
    "source": [
     "# Download LDSR Model\n",
-    "lsdr_dir='./models/upscale_models/LDSR'\n",
+    "lsdr_dir='./models/LDSR'\n",
     "os.makedirs(lsdr_dir)\n",
     "download(\"https://heibox.uni-heidelberg.de/f/31a76b13ea27482981b4/?dl=1\", f\"{lsdr_dir}/2021-11-02T06-24-44-project.yaml\")\n",
     "download(\"https://heibox.uni-heidelberg.de/f/578df07c8fc04ffbadf3/?dl=1\", f\"{lsdr_dir}/last.ckpt\")"
@@ -2189,7 +2189,7 @@
    "outputs": [],
    "source": [
     "#download Stable Diffusion x4 Upscale model\n",
-    "hf_hub_download(repo_id=\"stabilityai/stable-diffusion-x4-upscaler\", filename=\"x4-upscaler-ema.safetensors\", local_dir=\"./models/checkpoints/upscale\")"
+    "# hf_hub_download(repo_id=\"stabilityai/stable-diffusion-x4-upscaler\", filename=\"x4-upscaler-ema.safetensors\", local_dir=\"./models/checkpoints/upscale\")"
    ]
   },
   {
@@ -2206,7 +2206,7 @@
    "outputs": [],
    "source": [
     "# Download GFPGAN Model\n",
-    "git_download(repo_id=\"TencentARC/GFPGAN\", filename=\"GFPGANv1.4.pth\", tag='v1.3.4', local_dir='./models/facerestore_models/GFPGAN')"
+    "git_download(repo_id=\"TencentARC/GFPGAN\", filename=\"GFPGANv1.4.pth\", tag='v1.3.4', local_dir='./models/GFPGAN')"
    ]
   },
   {
@@ -2216,7 +2216,7 @@
    "outputs": [],
    "source": [
     "# Download Code Former Model\n",
-    "git_download(repo_id=\"TencentARC/GFPGAN\", filename=\"CodeFormer.pth\", tag='v1.3.4', local_dir=\"./models/facerestore_models/Codeformer\")"
+    "git_download(repo_id=\"TencentARC/GFPGAN\", filename=\"CodeFormer.pth\", tag='v1.3.4', local_dir=\"./models/Codeformer\")"
    ]
   },
   {
@@ -2226,7 +2226,7 @@
    "outputs": [],
    "source": [
     "# Download Restore Former Model\n",
-    "git_download(repo_id='TencentARC/GFPGAN', filename='RestoreFormer.pth', tag='v1,3,4', local_dir='./facerestore_models/Codeformer')"
+    "git_download(repo_id='TencentARC/GFPGAN', filename='RestoreFormer.pth', tag='v1,3,4', local_dir='./Codeformer')"
    ]
   },
   {
@@ -2243,7 +2243,7 @@
    "outputs": [],
    "source": [
     "# Download UltraLytics BBOX Model\n",
-    "snapshot_download(repo_id=\"Bingsu/adetailer\", allow_patterns=\"*.pt\", ignore_patterns=\"*-seg.pt\", local_dir=\"./models/ultralytics/bbox\")"
+    "snapshot_download(repo_id=\"Bingsu/adetailer\", allow_patterns=\"*.pt\", ignore_patterns=\"*-seg.pt\", local_dir=\"./models/adetailer/bbox\")"
    ]
   },
   {
@@ -2253,7 +2253,7 @@
    "outputs": [],
    "source": [
     "# Download UltraLytics SEGM Model\n",
-    "snapshot_download(repo_id=\"Bingsu/adetailer\", allow_patterns=\"*-seg.pt\", local_dir=\"./models/ultralytics/segm\")"
+    "snapshot_download(repo_id=\"Bingsu/adetailer\", allow_patterns=\"*-seg.pt\", local_dir=\"./models/adetailer/segm\")"
    ]
   },
   {
@@ -2276,8 +2276,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sams_dir='./models/sam'\n",
+    "os.makedirs(sams_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download SAM Vit H Model\n",
-    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_h_4b8939.pth\", \"./models/sams/sam_vit_h_4b8939.pth\")"
+    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_h_4b8939.pth\", \"./models/sam/sam_vit_h_4b8939.pth\")"
    ]
   },
   {
@@ -2287,7 +2297,7 @@
    "outputs": [],
    "source": [
     "# Download SAM Vit L Model\n",
-    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_l_0b3195.pth\", \"./models/sams/sam_vit_l_0b3195.pth\")"
+    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_l_0b3195.pth\", \"./models/sam/sam_vit_l_0b3195.pth\")"
    ]
   },
   {
@@ -2297,7 +2307,7 @@
    "outputs": [],
    "source": [
     "# Download SAM Vit B Model\n",
-    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_b_01ec64.pth\", \"./models/sams/sam_vit_b_01ec64.pth\")"
+    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_b_01ec64.pth\", \"./models/sam/sam_vit_b_01ec64.pth\")"
    ]
   },
   {
@@ -2305,15 +2315,6 @@
    "metadata": {},
    "source": [
     "#### SAMS HQ"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sams_dir='./models/sams'"
    ]
   },
   {
@@ -2369,7 +2370,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clip_vision_dir='./models/clip_vision'"
+    "clip_vision_dir='./models/clip_interrogator'"
    ]
   },
   {
