--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,6 +391,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {sd15_ckpt_dir}/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -455,6 +465,16 @@
    "source": [
     "# Download ClearVAE\n",
     "civitai_download(model_version_id=88156, local_dir=sd15_vae_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {sd15_vae_dir}/.cache"
    ]
   },
   {
@@ -589,6 +609,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {sd15_lora_dir}/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -698,6 +728,16 @@
    "source": [
     "# Download GS-Boyish\n",
     "civitai_download(model_version_id=95611, local_dir=sd15_embedding_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {sd15_embedding_dir}/.cache"
    ]
   },
   {
@@ -848,6 +888,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {sd15_controlnet_dir}/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -856,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,6 +984,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {sd2_ckpt_dir}/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -961,6 +1021,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {sd2_controlnet_dir}/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -969,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,6 +1188,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {sdxl_ckpt_dir}/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1132,6 +1212,16 @@
    "source": [
     "# Download Stable Diffusion XL 1.0 VAE\n",
     "hf_hub_download(repo_id=\"madebyollin/sdxl-vae-fp16-fix\", filename=\"sdxl_vae.safetensors\", local_dir=sdxl_vae_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {sdxl_vae_dir}/.cache"
    ]
   },
   {
@@ -1316,6 +1406,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {sdxl_lora_dir}/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1411,6 +1511,16 @@
    "source": [
     "# Download Negative XL Color_Balance_Calibration_0.8\n",
     "civitai_download(model_version_id=431425, local_dir=sdxl_embedding_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {sdxl_embedding_dir}/.cache"
    ]
   },
   {
@@ -1637,6 +1747,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {sdxl_controlnet_dir}/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1645,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1722,6 +1842,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {pony_ckpt_dir}/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1746,6 +1876,16 @@
    "source": [
     "# Download Pony Enhanced VAE Pastels\n",
     "civitai_download(model_version_id=739267, local_dir=pony_vae_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "# !rm -rf {pony_vae_dir}/.cache"
    ]
   },
   {
@@ -1806,6 +1946,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "# !rm -rf {pony_lora_dir}/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1814,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1849,6 +1999,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {ilxl_ckpt_dir}/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1857,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1910,6 +2070,16 @@
    "source": [
     "# Download Intermediate(SD 3.5 medium) Model\n",
     "civitai_download(model_version_id=1019118, local_dir=sd3_ckpt_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {sd3_ckpt_dir}/.cache"
    ]
   },
   {
@@ -1971,6 +2141,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {sd3_clip_dir}/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1979,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2016,6 +2196,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {flux_ckpt_dir}/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2030,6 +2220,16 @@
    "source": [
     "# Download Flux.1 Dev VAE\n",
     "hf_hub_download(repo_id=\"black-forest-labs/FLUX.1-dev\", filename=\"ae.safetensors\", local_dir=flux_vae_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {flux_vae_dir}/.cache"
    ]
   },
   {
@@ -2070,6 +2270,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {flux_lora_dir}/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2104,6 +2314,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf ./models/upscale_models/ESRGAN/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2112,7 +2332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2169,10 +2389,9 @@
    "outputs": [],
    "source": [
     "# Download LDSR Model\n",
-    "lsdr_dir='./models/upscale_models/LDSR'\n",
-    "os.makedirs(lsdr_dir)\n",
-    "download(\"https://heibox.uni-heidelberg.de/f/31a76b13ea27482981b4/?dl=1\", f\"{lsdr_dir}/2021-11-02T06-24-44-project.yaml\")\n",
-    "download(\"https://heibox.uni-heidelberg.de/f/578df07c8fc04ffbadf3/?dl=1\", f\"{lsdr_dir}/last.ckpt\")"
+    "ldsr_dir='./models/upscale_models/LDSR'\n",
+    "download(\"https://heibox.uni-heidelberg.de/f/31a76 db13ea27482981b4/?dl=1\", f\"{ldsr_dir}/2021-11-02T06-24-44-project.yaml\")\n",
+    "download(\"https://heibox.uni-heidelberg.de/f/578df07c8fc04ffbadf3/?dl=1\", f\"{ldsr_dir}/last.ckpt\")"
    ]
   },
   {
@@ -2190,6 +2409,16 @@
    "source": [
     "#download Stable Diffusion x4 Upscale model\n",
     "hf_hub_download(repo_id=\"stabilityai/stable-diffusion-x4-upscaler\", filename=\"x4-upscaler-ema.safetensors\", local_dir=\"./models/checkpoints/upscale\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf ./models/checkpoints/upscale/.cache"
    ]
   },
   {
@@ -2226,7 +2455,7 @@
    "outputs": [],
    "source": [
     "# Download Restore Former Model\n",
-    "git_download(repo_id='TencentARC/GFPGAN', filename='RestoreFormer.pth', tag='v1,3,4', local_dir='./facerestore_models/Codeformer')"
+    "git_download(repo_id='TencentARC/GFPGAN', filename='RestoreFormer.pth', tag='v1,3,4', local_dir='./models/facerestore_models/Codeformer')"
    ]
   },
   {
@@ -2257,6 +2486,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf ./models/ultralytics/bbox/.cache\n",
+    "!rm -rf ./models/ultralytics/segm/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2272,7 +2512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2282,7 +2522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2292,7 +2532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2309,7 +2549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2357,6 +2597,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {sams_dir}/.cache"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2365,7 +2615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2410,6 +2660,16 @@
     "dst=os.path.join(clip_vision_dir, \"CLIP-ViT-bigG-14-laion2B-39B-b160k.safetensors\")\n",
     "os.rename(src, dst)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf {clip_vision_dir}/.cache"
+   ]
   }
  ],
  "metadata": {
@@ -2428,7 +2688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
