--- a/stable-diffusion-models/alternative/download.ipynb
+++ b/stable-diffusion-models/alternative/download.ipynb
@@ -2226,7 +2226,7 @@
    "outputs": [],
    "source": [
     "# Download Restore Former Model\n",
-    "git_download(repo_id='TencentARC/GFPGAN', filename='RestoreFormer.pth', tag='v1,3,4', local_dir='./Codeformer')"
+    "git_download(repo_id='TencentARC/GFPGAN', filename='RestoreFormer.pth', tag='v1,3,4', local_dir='./models/Codeformer')"
    ]
   },
   {
