--- a/stable-diffusion-models/alternative/download.ipynb
+++ b/stable-diffusion-models/alternative/download.ipynb
@@ -1382,7 +1382,7 @@
    "outputs": [],
    "source": [
     "# Download Original Character - 南飛鳥(Minami Asuka) XL for Animagine XL 3.1 LoRA\n",
-    "hf_hub_download(repo_id=\"bean980310/minami_asuka_xl_animagine\", filename=\"minami_asuka_xl_animagine.safetensors\", local_dir=sdxl_lora_dir)"
+    "hf_hub_download(repo_id=\"bean980310/minami-asuka-xl-animagine\", filename=\"minami-asuka-xl-animagine.safetensors\", local_dir=sdxl_lora_dir)"
    ]
   },
   {
@@ -1392,7 +1392,7 @@
    "outputs": [],
    "source": [
     "# Download Tomboy XL for Animagine XL 3.1 LoRA\n",
-    "hf_hub_download(repo_id=\"bean980310/tomboy_xl_animagine\", filename=\"tomboy_xl_animagine.safetensors\", local_dir=sdxl_lora_dir)"
+    "hf_hub_download(repo_id=\"bean980310/tomboy-xl-animagine\", filename=\"tomboy-xl-animagine.safetensors\", local_dir=sdxl_lora_dir)"
    ]
   },
   {
