--- a/huggingface-language-models/download.ipynb
+++ b/huggingface-language-models/download.ipynb
@@ -50,6 +50,16 @@
     "# Download Llama-3.2-90B-Vision\n",
     "snapshot_download(repo_id=\"meta-llama/Llama-3.2-90B-Vision\", local_dir=\"./models/Llama-3.2-90B-Vision\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf ./.cache"
+   ]
   }
  ],
  "metadata": {
