--- a/huggingface-language-models/download.ipynb
+++ b/huggingface-language-models/download.ipynb
@@ -57,8 +57,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download nvidia/Llama-3.1-Nemotron-70B-Instruct-HF\n",
+    "snapshot_download(repo_id=\"nvidia/Llama-3.1-Nemotron-70B-Instruct-HF\", local_dir=\"./models/Llama-3.1-Nemotron-70B-Instruct-HF\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Delete cache\n",
-    "!rm -rf ./.cache"
+    "!rm -rf .cache"
    ]
   }
  ],
