Update model dir create logic

--- a/huggingface-language-models/download.ipynb
+++ b/huggingface-language-models/download.ipynb
@@ -67,6 +67,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download nvidia/Llama-3.1-Nemotron-70B-Reward-HF\n",
+    "snapshot_download(repo_id=\"nvidia/Llama-3.1-Nemotron-70B-Reward-HF\", local_dir=\"./models/Llama-3.1-Nemotron-70B-Reward-HF\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Delete cache\n",
     "!rm -rf .cache"
    ]
