--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -30,23 +30,46 @@
     "    else:\n",
     "        print(f\"{path} already exists\")\n",
     "\n",
-    "ckpt_dir = ['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1', 'upscale']\n",
+    "ckpt_dir = ['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1_s', 'flux1_d', 'upscale']\n",
+    "clip_dir=['sd3', 'sd35_medium', 'sd35_large']\n",
+    "controlnet_dir=['sd15', 'sd2', 'sdxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1_s', 'flux1_d']\n",
+    "diffusers_dir = ['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1_s', 'flux1_d', 'flux1']\n",
+    "embedding_dir=['sd15', 'sd2', 'sdxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1_s', 'flux1_d']\n",
+    "facerestore_model_dir=['CodeFormer', 'GFPGAN', 'RestoreFormer']\n",
+    "hypernetwork_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1_s', 'flux1_d']\n",
+    "lora_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1_s', 'flux1_d']\n",
+    "onnx_model_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1_s', 'flux1_d']\n",
+    "ultralytics_dir=['bbox', 'segm']\n",
+    "unet_model_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1_s', 'flux1_d']\n",
+    "upscale_model_dir=['ESRGAN', 'RealESRGAN', 'LDSR', 'SwinIR']\n",
+    "vae_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1_s', 'flux1_d']\n",
+    "\n",
     "[makedirs(os.path.join(\"./models/checkpoints\", dir)) for dir in ckpt_dir]\n",
-    "\n",
-    "vae_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1']\n",
-    "[makedirs(os.path.join(\"./models/vae\", dir)) for dir in vae_dir]\n",
-    "\n",
-    "lora_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1']\n",
-    "[makedirs(os.path.join(\"./models/loras\", dir)) for dir in lora_dir]\n",
-    "\n",
-    "embedding_dir=['sd15', 'sd2', 'sdxl', 'sd3', 'flux1']\n",
-    "[makedirs(os.path.join(\"./models/embeddings\", dir)) for dir in embedding_dir]\n",
-    "\n",
-    "controlnet_dir=['sd15', 'sd2', 'sdxl', 'sd3', 'flux1']\n",
+    "[makedirs(os.path.join(\"./models/clip\", dir)) for dir in clip_dir]\n",
+    "makedirs(\"./models/clip_vision\")\n",
+    "makedirs(\"./models/configs\")\n",
     "[makedirs(os.path.join(\"./models/controlnet\", dir)) for dir in controlnet_dir]\n",
-    "\n",
-    "clip_dir=['sd3']\n",
-    "[makedirs(os.path.join(\"./models/clip\", dir)) for dir in clip_dir]"
+    "makedirs(\"./models/deepbooru\")\n",
+    "[makedirs(os.path.join(\"./models/diffusers\", dir)) for dir in diffusers_dir]\n",
+    "[makedirs(os.path.join(\"./models/embeddings\", dir)) for dir in embedding_dir]\n",
+    "[makedirs(os.path.join('./models/facerestore_models', dir)) for dir in facerestore_model_dir]\n",
+    "makedirs(\"./models/gligen\")\n",
+    "[makedirs(os.path.join(\"./models/hypernetworks\", dir)) for dir in hypernetwork_dir]\n",
+    "makedirs(\"./models/inpaint\")\n",
+    "makedirs(\"./models/karlo\")\n",
+    "[makedirs(os.path.join(\"./models/loras\", dir)) for dir in lora_dir]\n",
+    "makedirs(\"./models/mmdets\")\n",
+    "[makedirs(os.path.join('./models/onnx', dir)) for dir in onnx_model_dir]\n",
+    "makedirs(\"./models/photomaker\")\n",
+    "makedirs(\"./models/prompt_expansion\")\n",
+    "makedirs(\"./models/safety_ckecker\")\n",
+    "makedirs(\"./models/sams\")\n",
+    "makedirs(\"./models/style_models\")\n",
+    "[makedirs(os.path.join('./models/ultralytics', dir)) for dir in ultralytics_dir]\n",
+    "[makedirs(os.path.join('./models/unet', dir)) for dir in unet_model_dir]\n",
+    "[makedirs(os.path.join('./models/upscale_models', dir)) for dir in upscale_model_dir]\n",
+    "[makedirs(os.path.join(\"./models/vae\", dir)) for dir in vae_dir]\n",
+    "makedirs(\"./models/vae_approx\")"
    ]
   },
   {
@@ -58,11 +81,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User is already logged in.\n"
+     ]
+    }
+   ],
    "source": [
-    "from huggingface_hub import notebook_login, hf_hub_download, snapshot_download\n",
+    "from huggingface_hub import notebook_login, hf_hub_download, snapshot_download, hf_hub_url\n",
     "\n",
     "notebook_login(new_session=False)"
    ]
@@ -100,7 +131,7 @@
    "source": [
     "models_dir='./models'\n",
     "model_types=['checkpoints', 'clip', 'clip_vision', 'configs', 'controlnet', 'deepbooru', 'diffusers', 'embeddings', 'facerestore_models', 'gligen', 'hypernetworks', 'inpaint', 'karlo', 'loras', 'mmdets', 'onnx', 'photomaker', 'prompt_expansion', 'safety_ckecker', 'sams', 'style_models', 'ultralytics', 'unet', 'upscale_models', 'vae', 'vae_approx']\n",
-    "model_versions=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1']\n",
+    "model_versions=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1_s', 'flux1_d']\n",
     "\n",
     "class ModelDirs:\n",
     "    def __init__(self, model_versions):\n",
@@ -197,17 +228,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sd15_ckpt_dir' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Download AbyssOrangeMix3 Model\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m hf_hub_download(repo_id\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWarriorMama777/OrangeMixs\u001b[39m\u001b[38;5;124m\"\u001b[39m, subfolder\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mModels/AbyssOrangeMix3\u001b[39m\u001b[38;5;124m\"\u001b[39m, filename\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAOM3A1B_orangemixs.safetensors\u001b[39m\u001b[38;5;124m\"\u001b[39m, local_dir\u001b[38;5;241m=\u001b[39m\u001b[43msd15_ckpt_dir\u001b[49m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# filename=\"AOM3A1B_orangemixs.safetensors\"\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# src=os.path.join(sd15_ckpt_dir, \"Models/AbyssOrangeMix3\")\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# dst=sd15_ckpt_dir\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# shutil.rmtree(os.path.join(sd15_ckpt_dir, \"Models\"))\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sd15_ckpt_dir' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Download AbyssOrangeMix3 Model\n",
-    "hf_hub_download(repo_id=\"WarriorMama777/OrangeMixs\", filename=\"Models/AbyssOrangeMix3/AOM3A1B_orangemixs.safetensors\", local_dir=sd15_ckpt_dir)\n",
-    "filename=\"AOM3A1B_orangemixs.safetensors\"\n",
-    "src=os.path.join(sd15_ckpt_dir, \"Models/AbyssOrangeMix3\")\n",
-    "dst=sd15_ckpt_dir\n",
-    "shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\n",
-    "shutil.rmtree(os.path.join(sd15_ckpt_dir, \"Models\"))"
+    "hf_hub_download(repo_id=\"WarriorMama777/OrangeMixs\", subfolder=\"Models/AbyssOrangeMix3\", filename=\"AOM3A1B_orangemixs.safetensors\", local_dir=sd15_ckpt_dir)\n",
+    "# filename=\"AOM3A1B_orangemixs.safetensors\"\n",
+    "# src=os.path.join(sd15_ckpt_dir, \"Models/AbyssOrangeMix3\")\n",
+    "# dst=sd15_ckpt_dir\n",
+    "# shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\n",
+    "# shutil.rmtree(os.path.join(sd15_ckpt_dir, \"Models\"))"
    ]
   },
   {
