--- a/stable-diffusion-models/alternative/download.ipynb
+++ b/stable-diffusion-models/alternative/download.ipynb
@@ -30,23 +30,30 @@
     "    else:\n",
     "        print(f\"{path} already exists\")\n",
     "\n",
-    "ckpt_dir = ['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1', 'upscale']\n",
+    "ckpt_dir = ['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1', 'upscale']\n",
     "[makedirs(os.path.join(\"./models/checkpoints\", dir)) for dir in ckpt_dir]\n",
     "\n",
-    "vae_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1']\n",
+    "diffusers_dir = ['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1']\n",
+    "[makedirs(os.path.join(\"./models/diffusers\", dir)) for dir in diffusers_dir]\n",
+    "\n",
+    "vae_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1']\n",
     "[makedirs(os.path.join(\"./models/vae\", dir)) for dir in vae_dir]\n",
     "\n",
-    "lora_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1']\n",
+    "lora_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1']\n",
     "[makedirs(os.path.join(\"./models/loras\", dir)) for dir in lora_dir]\n",
     "\n",
-    "embedding_dir=['sd15', 'sd2', 'sdxl', 'sd3', 'flux1']\n",
+    "embedding_dir=['sd15', 'sd2', 'sdxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1']\n",
     "[makedirs(os.path.join(\"./models/embeddings\", dir)) for dir in embedding_dir]\n",
     "\n",
-    "controlnet_dir=['sd15', 'sd2', 'sdxl', 'sd3', 'flux1']\n",
+    "controlnet_dir=['sd15', 'sd2', 'sdxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1']\n",
     "[makedirs(os.path.join(\"./models/controlnet\", dir)) for dir in controlnet_dir]\n",
     "\n",
-    "clip_dir=['sd3']\n",
-    "[makedirs(os.path.join(\"./models/clip\", dir)) for dir in clip_dir]"
+    "clip_dir=['sd3', 'sd35_medium', 'sd35_large']\n",
+    "[makedirs(os.path.join(\"./models/clip\", dir)) for dir in clip_dir]\n",
+    "\n",
+    "makedirs(\"./models/configs\")\n",
+    "makedirs(\"./models/clip_vision\")\n",
+    "makedirs(\"./\")"
    ]
   },
   {
