--- a/huggingface-language-models/download.ipynb
+++ b/huggingface-language-models/download.ipynb
@@ -6,6 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
+    "os.makedirs('models')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from huggingface_hub import notebook_login, hf_hub_download, snapshot_download\n",
     "\n",
     "notebook_login(new_session=False)"
