--- a/huggingface-language-models/download.ipynb
+++ b/huggingface-language-models/download.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -20,6 +27,13 @@
     "from huggingface_hub import notebook_login, hf_hub_download, snapshot_download\n",
     "\n",
     "notebook_login(new_session=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download Model"
    ]
   },
   {
@@ -80,6 +94,13 @@
    "source": [
     "# Download nvidia/Llama-3.1-Nemotron-70B-Reward-HF\n",
     "snapshot_download(repo_id=\"nvidia/Llama-3.1-Nemotron-70B-Reward-HF\", local_dir=\"./models/Llama-3.1-Nemotron-70B-Reward-HF\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Delete a cache"
    ]
   },
   {
