--- a/huggingface-language-models/download.ipynb
+++ b/huggingface-language-models/download.ipynb
@@ -110,7 +110,57 @@
    "outputs": [],
    "source": [
     "# Delete cache\n",
-    "!rm -rf .cache"
+    "!rm -rf ./models/Llama-3.2-1B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf ./models/Llama-3.2-3B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf ./models/Llama-3.2-11B-Vision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf ./models/Llama-3.2-90B-Vision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf ./models/Llama-3.1-Nemotron-70B-Instruct-HF/.cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete cache\n",
+    "!rm -rf ./models/Llama-3.1-Nemotron-70B-Reward-HF/.cache"
    ]
   }
  ],
