--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -44,19 +44,30 @@
     "upscale_model_dir=['ESRGAN', 'RealESRGAN', 'LDSR', 'SwinIR']\n",
     "vae_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'sd35_medium', 'sd35_large', 'flux1_s', 'flux1_d']\n",
     "\n",
+    "makedirs(\"./models/animatediff_models\")\n",
+    "makedirs(\"./models/animatediff_motion_lora\")\n",
+    "makedirs(\"./models/animatediff_video_formats\")\n",
+    "makedirs(\"./models/blip\")\n",
     "[makedirs(os.path.join(\"./models/checkpoints\", dir)) for dir in ckpt_dir]\n",
     "[makedirs(os.path.join(\"./models/clip\", dir)) for dir in clip_dir]\n",
     "makedirs(\"./models/clip_vision\")\n",
+    "makedirs(\"./models/CogVideo\")\n",
     "makedirs(\"./models/configs\")\n",
     "[makedirs(os.path.join(\"./models/controlnet\", dir)) for dir in controlnet_dir]\n",
     "makedirs(\"./models/deepbooru\")\n",
     "[makedirs(os.path.join(\"./models/diffusers\", dir)) for dir in diffusers_dir]\n",
+    "makedirs(\"./models/diffusion_models\")\n",
     "[makedirs(os.path.join(\"./models/embeddings\", dir)) for dir in embedding_dir]\n",
     "[makedirs(os.path.join('./models/facerestore_models', dir)) for dir in facerestore_model_dir]\n",
     "makedirs(\"./models/gligen\")\n",
     "[makedirs(os.path.join(\"./models/hypernetworks\", dir)) for dir in hypernetwork_dir]\n",
+    "makedirs(\"./models/insightface\")\n",
     "makedirs(\"./models/inpaint\")\n",
+    "makedirs(\"./models/Joy_caption\")\n",
     "makedirs(\"./models/karlo\")\n",
+    "makedirs(\"./models/layerstyle\")\n",
+    "makedirs(\"./models/liveportrait\")\n",
+    "makedirs(\"./models/LLM\")\n",
     "[makedirs(os.path.join(\"./models/loras\", dir)) for dir in lora_dir]\n",
     "makedirs(\"./models/mmdets\")\n",
     "[makedirs(os.path.join('./models/onnx', dir)) for dir in onnx_model_dir]\n",
@@ -69,7 +80,8 @@
     "[makedirs(os.path.join('./models/unet', dir)) for dir in unet_model_dir]\n",
     "[makedirs(os.path.join('./models/upscale_models', dir)) for dir in upscale_model_dir]\n",
     "[makedirs(os.path.join(\"./models/vae\", dir)) for dir in vae_dir]\n",
-    "makedirs(\"./models/vae_approx\")"
+    "makedirs(\"./models/vae_approx\")\n",
+    "makedirs(\"./models/xlabs\")"
    ]
   },
   {
