--- a/huggingface-language-models/download.ipynb
+++ b/huggingface-language-models/download.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Download Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Prepare"
    ]
   },
@@ -15,7 +22,7 @@
    "source": [
     "import os\n",
     "\n",
-    "os.makedirs('models')"
+    "os.makedirs('models', exist_ok=True)"
    ]
   },
   {
