--- a/stable-audio-models/download.ipynb
+++ b/stable-audio-models/download.ipynb
@@ -1,14 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "os.makedirs('models')"
+    "# Download Model"
    ]
   },
   {
@@ -17,7 +13,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from huggingface_hub import notebook_login, snapshot_download\n",
+    "import os\n",
+    "\n",
+    "os.makedirs('models', exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import notebook_login, hf_hub_download\n",
     "\n",
     "notebook_login(new_session=False)"
    ]
@@ -29,7 +36,8 @@
    "outputs": [],
    "source": [
     "# Download Stable Audio model\n",
-    "snapshot_download(repo_id='stabilityai/stable-audio-open-1.0', local_dir='./models')"
+    "hf_hub_download(repo_id='stabilityai/stable-audio-open-1.0', filename=\"model.safetensors\", local_dir='./models')\n",
+    "hf_hub_download(repo_id='stabilityai/stable-audio-open-1.0', filename=\"model_config.json\", local_dir='./models')"
    ]
   },
   {
