Add a1111-sdwebui for runpod

--- a/stable-diffusion-models/alternative/a1111_download.ipynb
+++ b/stable-diffusion-models/alternative/a1111_download.ipynb
@@ -31,19 +31,32 @@
     "        print(f\"{path} already exists\")\n",
     "\n",
     "ckpt_dir = ['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3']\n",
-    "[makedirs(os.path.join(\"./models/Stable-diffusion\", dir)) for dir in ckpt_dir]\n",
-    "\n",
-    "vae_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3']\n",
-    "[makedirs(os.path.join(\"./models/VAE\", dir)) for dir in vae_dir]\n",
-    "\n",
-    "lora_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3']\n",
-    "[makedirs(os.path.join(\"./models/Lora\", dir)) for dir in lora_dir]\n",
-    "\n",
-    "embedding_dir=['sd15', 'sd2', 'sdxl', 'sd3']\n",
-    "[makedirs(os.path.join(\"./embeddings\", dir)) for dir in embedding_dir]\n",
-    "\n",
     "controlnet_dir=['sd15', 'sd2', 'sdxl', 'sd3']\n",
-    "[makedirs(os.path.join(\"./models/ControlNet\", dir)) for dir in controlnet_dir]"
+    "embedding_dir=['sd15', 'sd2', 'sdxl', 'sd3']\n",
+    "facerestore_model_dir=['CodeFormer', 'GFPGAN', 'RestoreFormer']\n",
+    "hypernetwork_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3']\n",
+    "lora_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3']\n",
+    "ultralytics_dir=['bbox', 'segm']\n",
+    "upscale_model_dir=['ESRGAN', 'RealESRGAN', 'LDSR', 'SwinIR']\n",
+    "vae_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3']\n",
+    "\n",
+    "makedirs(\"./models/BLIP\")\n",
+    "[makedirs(os.path.join(\"./models/Stable-diffusion\", dir)) for dir in ckpt_dir]\n",
+    "makedirs(\"./models/clip_interrogator\")\n",
+    "makedirs(\"./configs\")\n",
+    "[makedirs(os.path.join(\"./models/ControlNet\", dir)) for dir in controlnet_dir]\n",
+    "makedirs(\"./models/deepbooru\")\n",
+    "[makedirs(os.path.join(\"./embeddings\", dir)) for dir in embedding_dir]\n",
+    "[makedirs(os.path.join('./models', dir)) for dir in facerestore_model_dir]\n",
+    "[makedirs(os.path.join(\"./models/hypernetworks\", dir)) for dir in hypernetwork_dir]\n",
+    "makedirs(\"./models/insightface\")\n",
+    "makedirs(\"./models/karlo\")\n",
+    "[makedirs(os.path.join(\"./models/Lora\", dir)) for dir in lora_dir]\n",
+    "makedirs(\"./models/sam\")\n",
+    "[makedirs(os.path.join('./models/adetailer', dir)) for dir in ultralytics_dir]\n",
+    "[makedirs(os.path.join('./models', dir)) for dir in upscale_model_dir]\n",
+    "[makedirs(os.path.join(\"./models/VAE\", dir)) for dir in vae_dir]\n",
+    "makedirs(\"./models/VAE-approx\")\n"
    ]
   },
   {
@@ -2135,8 +2148,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "esrgan_dir=\"./models/ESRGAN\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download 4x AnimeSharp Model\n",
-    "hf_hub_download(repo_id=\"Kim2091/AnimeSharp\", filename=\"4x-AnimeSharp.pth\", local_dir=\"./models/ESRGAN\")"
+    "hf_hub_download(repo_id=\"Kim2091/AnimeSharp\", filename=\"4x-AnimeSharp.pth\", local_dir=esrgan_dir)"
    ]
   },
   {
@@ -2146,7 +2168,7 @@
    "outputs": [],
    "source": [
     "# Download 4x UltraSharp Model\n",
-    "hf_hub_download(repo_id=\"Kim2091/UltraSharp\", filename=\"4x-UltraSharp.pth\", local_dir=\"./models/ESRGAN\")"
+    "hf_hub_download(repo_id=\"Kim2091/UltraSharp\", filename=\"4x-UltraSharp.pth\", local_dir=esrgan_dir)"
    ]
   },
   {
@@ -2156,7 +2178,7 @@
    "outputs": [],
    "source": [
     "# Delete cache\n",
-    "!rm -rf ./models/ESRGAN/.cache"
+    "!rm -rf {esrgan_dir}/.cache"
    ]
   },
   {
@@ -2187,8 +2209,7 @@
     "        response = get(url)\n",
     "        f.write(response.content)\n",
     "\n",
-    "realesrgan_dir=\"./models/RealESRGAN\"\n",
-    "os.makedirs(realesrgan_dir, exist_ok=True)"
+    "realesrgan_dir=\"./models/RealESRGAN\""
    ]
   },
   {
@@ -2226,7 +2247,6 @@
    "source": [
     "# Download LDSR Model\n",
     "lsdr_dir='./models/LDSR'\n",
-    "os.makedirs(lsdr_dir)\n",
     "download(\"https://heibox.uni-heidelberg.de/f/31a76b13ea27482981b4/?dl=1\", f\"{lsdr_dir}/2021-11-02T06-24-44-project.yaml\")\n",
     "download(\"https://heibox.uni-heidelberg.de/f/578df07c8fc04ffbadf3/?dl=1\", f\"{lsdr_dir}/last.ckpt\")"
    ]
@@ -2326,8 +2346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sams_dir='./models/sam'\n",
-    "os.makedirs(sams_dir)"
+    "sams_dir='./models/sam'"
    ]
   },
   {
@@ -2337,7 +2356,7 @@
    "outputs": [],
    "source": [
     "# Download SAM Vit H Model\n",
-    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_h_4b8939.pth\", \"./models/sam/sam_vit_h_4b8939.pth\")"
+    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_h_4b8939.pth\", f\"{sams_dir}/sam_vit_h_4b8939.pth\")"
    ]
   },
   {
@@ -2347,7 +2366,7 @@
    "outputs": [],
    "source": [
     "# Download SAM Vit L Model\n",
-    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_l_0b3195.pth\", \"./models/sam/sam_vit_l_0b3195.pth\")"
+    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_l_0b3195.pth\", f\"{sams_dir}/sam_vit_l_0b3195.pth\")"
    ]
   },
   {
@@ -2357,7 +2376,7 @@
    "outputs": [],
    "source": [
     "# Download SAM Vit B Model\n",
-    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_b_01ec64.pth\", \"./models/sam/sam_vit_b_01ec64.pth\")"
+    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_b_01ec64.pth\", f\"{sams_dir}/sam_vit_b_01ec64.pth\")"
    ]
   },
   {
