--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -2624,6 +2624,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upscale_models_dir=\"./models/upscale_models\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2636,8 +2645,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "esrgan_dir=f\"{upscale_models_dir}/ESRGAN\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download 4x AnimeSharp Model\n",
-    "hf_hub_download(repo_id=\"Kim2091/AnimeSharp\", filename=\"4x-AnimeSharp.pth\", local_dir=\"./models/upscale_models/ESRGAN\")"
+    "hf_hub_download(repo_id=\"Kim2091/AnimeSharp\", filename=\"4x-AnimeSharp.pth\", local_dir=esrgan_dir)"
    ]
   },
   {
@@ -2647,7 +2665,7 @@
    "outputs": [],
    "source": [
     "# Download 4x UltraSharp Model\n",
-    "hf_hub_download(repo_id=\"Kim2091/UltraSharp\", filename=\"4x-UltraSharp.pth\", local_dir=\"./models/upscale_models/ESRGAN\")"
+    "hf_hub_download(repo_id=\"Kim2091/UltraSharp\", filename=\"4x-UltraSharp.pth\", local_dir=esrgan_dir)"
    ]
   },
   {
@@ -2657,7 +2675,7 @@
    "outputs": [],
    "source": [
     "# Delete cache\n",
-    "!rm -rf ./models/upscale_models/ESRGAN/.cache"
+    "!rm -rf {esrgan_dir}/.cache"
    ]
   },
   {
@@ -2688,7 +2706,7 @@
     "        response = get(url)\n",
     "        f.write(response.content)\n",
     "\n",
-    "realesrgan_dir=\"./models/upscale_models/RealESRGAN\""
+    "realesrgan_dir=f\"{upscale_models_dir}/RealESRGAN\""
    ]
   },
   {
@@ -2725,7 +2743,7 @@
    "outputs": [],
    "source": [
     "# Download LDSR Model\n",
-    "ldsr_dir='./models/upscale_models/LDSR'\n",
+    "ldsr_dir=f'{upscale_models_dir}/LDSR'\n",
     "download(\"https://heibox.uni-heidelberg.de/f/31a76 db13ea27482981b4/?dl=1\", f\"{ldsr_dir}/2021-11-02T06-24-44-project.yaml\")\n",
     "download(\"https://heibox.uni-heidelberg.de/f/578df07c8fc04ffbadf3/?dl=1\", f\"{ldsr_dir}/last.ckpt\")"
    ]
@@ -2848,12 +2866,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sams_dir='./models/sams'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Download SAM Vit H Model\n",
-    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_h_4b8939.pth\", \"./models/sams/sam_vit_h_4b8939.pth\")"
+    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_h_4b8939.pth\", f\"{sams_dir}/sam_vit_h_4b8939.pth\")"
    ]
   },
   {
@@ -2863,7 +2890,7 @@
    "outputs": [],
    "source": [
     "# Download SAM Vit L Model\n",
-    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_l_0b3195.pth\", \"./models/sams/sam_vit_l_0b3195.pth\")"
+    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_l_0b3195.pth\", f\"{sams_dir}/sam_vit_l_0b3195.pth\")"
    ]
   },
   {
@@ -2873,7 +2900,7 @@
    "outputs": [],
    "source": [
     "# Download SAM Vit B Model\n",
-    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_b_01ec64.pth\", \"./models/sams/sam_vit_b_01ec64.pth\")"
+    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_b_01ec64.pth\", f\"{sams_dir}/sam_vit_b_01ec64.pth\")"
    ]
   },
   {
@@ -2881,15 +2908,6 @@
    "metadata": {},
    "source": [
     "#### SAMS HQ"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 195,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sams_dir='./models/sams'"
    ]
   },
   {
